<resources>
    <string name="app_name">VeMeet</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="search">Search</string>
    <string name="save_search">Save Search</string>
    <string name="around_me">Around me</string>
    <string name="chat">Chat messages</string>
    <string name="online">Online</string>
    <string name="whos_new">Who\'s new</string>
    <string name="in_depth">In depth</string>
    <string name="activity_board">Activity Board</string>
    <string name="friends">Friends</string>
    <string name="favourites">Favourites</string>
    <string name="liked_me">Liked me</string>
    <string name="my_profile">My profile</string>
    <string name="upgrade_packages">Upgrade packages</string>
    <string name="terms">Terms of use</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="sign_up">Register</string>


    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="queer">Queer</string>
    <string name="all">All</string>
    <string name="tg">Transgender</string>
    <string name="dob">Date of birth</string>

    <string name="t1">By clicking </string>
    <string name="t2">Sign Up </string>
    <string name="t3">you agree to our </string>
    <string name="t4">Terms and Policies</string>

    <string name="or">--OR--</string>
    <string name="fb">Signup with facebook</string>
    <string name="photo">You can add photo now!</string>

    <string name="basics">Basic Information</string>
    <string name="about_me">     About me</string>
    <string name="age">     Age</string>
    <string name="residence">     Residence</string>

    <string name="searching_for">Searching for</string>
    <string name="gender">     Gender</string>
    <string name="lifestyle">     Life style</string>
    <string name="for_others">     For</string>

    <string name="pi">Personal Information</string>
    <string name="so">     Sexual Orientation</string>
    <string name="gi">     Gender Identify</string>
    <string name="status">     Status</string>
    <string name="children">    Children</string>
    <string name="smoking">     Smoking</string>
    <string name="religion">     Religion</string>
    <string name="drinking">     Drinking</string>

    <string name="optics">Optics</string>
    <string name="height">     Height</string>
    <string name="eyecolor">     Eye color</string>
    <string name="haircolor">     Hair color</string>

    <string name="photos">Photos</string>

    <string name="save">Save</string>
    <string name="modify">Modify</string>
    <string name="cant_change">Can\'t change</string>
    <string name="confirm">Confirm password</string>
    <string name="photos_who">Who can see my photos</string>
    <string name="friend_request">Friend request</string>
    <string name="friend_view">Who can view my friends</string>
    <string name="incognito">Incogrito modus</string>
    <string name="submit">Submit</string>
    <string name="blank">(Leave it blank if not required)</string>
    <string name="order">Order</string>

    <string name="who_are">Who are</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="only_online">Only online</string>
    <string name="only_pic">Only with pic</string>
    <string name="saves_search">Save search</string>
    <string name="i_c">Inognito search</string>
    <string name="who_new">Who\'s new</string>
    <string name="miles">Miles</string>
    <string name="mile">Search miles around:</string>

    <string name="offline">Offline</string>
    <string name="back">Go Back</string>
    <string name="searched_for">Searched for...</string>
    <string name="search_distance">Looking for people around you</string>
    <string name="type_a_message_here">Type a message here</string>
    <string name="subject">Subject:</string>
    <string name="date">Date:</string>
    <string name="loc">Location:</string>
    <string name="posted_by">Posted by</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="forgot_username_or_password">Forgot username or password?</string>
    <string name="dummy_name_age">name,age</string>
    <string name="send_message">Send Message</string>
    <string name="h">Left header</string>
    <string name="headiing">headiing</string>
    <string name="basib_intro">basib intro</string>
    <string name="random">do wyou wan tt o kno</string>
    <string name="vid">video</string>
    <string name="contact">Contact</string>
    <string name="newvid">add new video</string>
    <string name="v">Add a video</string>
    <string name="new_vid">Add a new video</string>
    <string name="please_upload_your_video_to_youtube_and_enter_copy_paste_the_url_in_the_box_below">Please upload your video to youTube and enter(COPY/PASTE) the URL in the box below</string>
    <string name="add_activity">Add activity</string>
    <string name="refrest_activities">refrest_activities</string>
    <string name="date1">Date</string>
    <string name="show_all">Show all</string>
    <string name="or_select_date">..or select date</string>
    <string name="rad">Radius</string>
    <string name="select_date">Select Date</string>
    <string name="picnic">Picnic</string>
    <string name="desc">Description</string>
    <string name="select_a_picture">Select a picture</string>
    <string name="refresh_activities">Refresh activities</string>
    <string name="saved_activities">Saved activities</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="select_pic">Select pic</string>
    <string name="subject_like_picnic">Subject (like picnic)</string>
    <string name="incognito_search">Incognito search</string>


    <string-array name="genderArray">
        <item>@string/female</item>
        <item>@string/male</item>
        <item>@string/queer</item>
        <item>Transgender</item>
        <item>None defined</item>
        <item>@string/all</item>
    </string-array>

    <string-array name="lifestyleArray">
        <item>Vegan</item>
        <item>Vegan(raw)</item>
        <item>Vegan(xvx)</item>
        <item>Vegetarian</item>
        <item>Vegetarian(instincto)</item>
        <item>Freegan</item>
        <item>Fruitarian</item>
    </string-array>

    <string-array name="forArray">
        <item>Heterosexual</item>
        <item>Homosexual</item>
        <item>Pansexual</item>
        <item>Polysexual</item>
        <item>None defined</item>
        <item>All</item>
    </string-array>

    <string-array name="sexualOrientationArray">
        <item>Heterosexual</item>
        <item>Homosexual</item>
        <item>Pansexual</item>
        <item>Polysexual</item>
    </string-array>

    <string-array name="genderIndentifyArray">
        <item>@string/female</item>
        <item>@string/male</item>
        <item>@string/queer</item>
        <item>Transgender</item>
    </string-array>
    <string-array name="statusArray">
        <item>Single</item>
        <item>Divorced</item>
        <item>Married</item>
        <item>Open relationship</item>
        <item>Prefer not to say</item>
    </string-array>

    <string-array name="chldrenArray">
        <item>No</item>
        <item>Yes</item>
        <item>Prefer not to say</item>
    </string-array>

    <string-array name="smokingArray">
        <item>No</item>
        <item>Yes</item>
        <item>Sometimes</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="religionArray">
        <item>Christian</item>
        <item>Spiritual</item>
        <item>Buddhism</item>
        <item>Hindu</item>
        <item>Jewish</item>
        <item>Muslim</item>
        <item>Atheist</item>
        <item>Luthern</item>
        <item>Mormon</item>
        <item>Methodist</item>
        <item>Other</item>
        <item>Prefer not to say</item>
    </string-array>

    <string-array name="eyeColorArray">
        <item>Green</item>
        <item>Blue</item>
        <item>Gray</item>
        <item>Brown</item>
        <item>Colorfull</item>
    </string-array>

    <string-array name="hairColorArray">
        <item>Blonde</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Black</item>
        <item>Grey</item>
        <item>White</item>
        <item>Bald</item>
        <item>Colorfull</item>
    </string-array>

</resources>
