<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ssapps.com.datingapp.LoginActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/main_blue_color"
        android:text="@string/login_with_facebook"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:id="@+id/fb_login_button"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:gravity="center_horizontal"
        android:layout_above="@id/fb_login_button"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:id="@+id/or_tv"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/login"
        android:background="@color/leaf_green"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_above="@id/or_tv"
        android:layout_margin="10dp"
        android:id="@+id/login_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_username_or_password"
        android:textColor="@color/black"
        android:layout_above="@id/login_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:id="@+id/forgot_tv"
        android:textSize="12sp"
        />

    <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/password_layout"
        android:layout_margin="10dp"
        android:layout_above="@id/forgot_tv"
    >
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:id="@+id/password_et"
    android:inputType="textPassword"
        android:textSize="10sp"
        android:imeOptions="actionDone"
        android:focusedByDefault="false"
    />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_layout"
        android:layout_margin="10dp"
        android:layout_above="@id/password_layout"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColor="@color/black"
            android:id="@+id/username_et"
            android:textSize="10sp"
            android:imeOptions="actionDone"
            android:inputType="textImeMultiLine"
            android:focusedByDefault="false"
            />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/username_layout"
        android:src="@drawable/fb"
        android:scaleType="fitCenter"
        />

</RelativeLayout>
</layout>
