<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="ssapps.com.datingapp.SignupActivity"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"

                >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_name_layout"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/username"
                        android:hint="@string/user_name"
                        android:textColor="@color/leaf_green"
                        android:textSize="10sp"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_layout"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"

                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password"
                        android:hint="@string/password"
                        android:textColor="@color/leaf_green"
                        android:inputType="textPassword"
                        android:textSize="10sp"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_layout"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/email"
                        android:hint="@string/email"
                        android:textColor="@color/leaf_green"
                        android:inputType="textEmailAddress"
                        android:textSize="10sp"
                        />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp"
                        >
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:id="@+id/male_radiobutton"
                            android:textSize="12sp"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/queer"
                            android:id="@+id/queer_radiobutton"
                            android:textSize="12sp"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            />
                    </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginLeft="10dp"
                            >
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                >
                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/female"
                                    android:id="@+id/female_radiobutton"
                                    android:textSize="12sp"
                                    android:scaleX="0.8"
                                    android:scaleY="0.8"
                                    />
                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/all"
                                    android:id="@+id/all_radiobutton"
                                    android:textSize="12sp"
                                    android:scaleX="0.8"
                                    android:scaleY="0.8"
                                    />
                            </LinearLayout>
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tg"
                                android:id="@+id/transgender_radiobutton"
                                android:textSize="12sp"
                                android:scaleX="0.8"
                                android:scaleY="0.8"
                                />
                        </LinearLayout>
                    </LinearLayout>


                </RadioGroup>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/dob"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:inputType="date"
                        android:textSize="12sp"
                        />


                </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t1"
                    android:textColor="@color/black"
                    android:paddingLeft="5dp"
                    android:textSize="12sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t2"
                    android:textColor="@color/leaf_green"
                    android:paddingLeft="5dp"
                    android:textSize="12sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t3"
                    android:textColor="@color/black"
                    android:paddingLeft="5dp"
                    android:textSize="12sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t4"
                    android:textColor="@color/leaf_green"
                    android:paddingLeft="5dp"
                    android:textSize="12sp"
                    />
            </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

</layout>
