<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ssapps.com.datingapp.AddActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:id="@+id/subject_layout"
        android:layout_margin="10dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_like_picnic"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/subject_et"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loc"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/location_tv"
        android:layout_marginTop="10dp"
        android:layout_below="@id/subject_layout"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/country_spinner"
        android:textColor="@color/black"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="0dp"
        android:layout_below="@id/location_tv"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/city_spinner"
        android:textColor="@color/black"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="0dp"
        android:layout_below="@id/country_spinner"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_margin="10dp"
        android:id="@+id/description_layout"
        android:layout_below="@id/city_spinner"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/description_et"
            />
    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_layout"
        android:id="@+id/date_rl"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textColor="@color/white"
            android:background="@color/leaf_green"
            android:id="@+id/select_date_Button"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/select_date_Button"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/select_date_Button"
            android:id="@+id/date_display_tv"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_rl"
        android:id="@+id/picture_ll"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/select_pic"
            android:textColor="@color/black"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/select_a_picture"
            android:textSize="15sp"
            android:id="@+id/selct_picture_button"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/leaf_green"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/fb"
            android:scaleType="fitXY"
            android:id="@+id/selected_picture"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/picture_ll"
        android:text="@string/submit"
        android:background="@color/leaf_green"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/submit_button"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

</RelativeLayout>
    </ScrollView>
</layout>
